<resources>
    <string name="app_name">TimeKick</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_settings">Settings</string>
    <!-- Strings related to Settings -->

    <string name="activity_time">Time</string>
    <string name="activity_countdown">Countdown</string>
    <string name="activity_target">Target</string>

    <string name="favorite_mode_key">FAV_MODE</string>
    <string name="favorite_duration_key">FAV_DURATION</string>
    <string name="favorite_duration_string_key">FAV_DURATION_STR</string>
    <string name="favorite_countdown_duration_key">FAV_COUNTDOWN_DURATION</string>
    <string name="last_target_date_key">LAST_TARGET_DATE</string>

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_view_seconds">Show/hide seconds on timer screen</string>
    <string name="pref_description_view_seconds">View Seconds
    </string>

    <string name="pref_title_show_toast">Show/hide toast with reminder</string>
    <string name="pref_description_show_toast">Show Toast
    </string>

    <string name="pref_title_feedback_prompt">Enable/disable prompt for feedback</string>
    <string name="pref_description_feedback_prompt">Feedback Prompt
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string name="pref_title_system_sync_settings">System sync settings</string>
    <string name="pref_title_leave_feedback">Leave Feedback</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>
    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>
    <string name="pref_title_vibrate">Vibrate</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="facebook_app_id">1518819795085985</string>
</resources>
